--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,7 @@
     "module": "commonjs",
 
     "declaration": true,
-
-    "declarationMap": true,
-    "sourceMap": true,
-    "inlineSources": true,
+    "emitDeclarationOnly": true,
 
     "strict": true,
     "skipLibCheck": true,
