ci: use npm command to publish

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,4 +20,5 @@ jobs:
           registry-url: "https://registry.npmjs.org"
       - run: bun install
       - run: bun run build
-      - run: bun publish
+      - run: bun pm pack
+      - run: npm publish
