ci: add repository url

--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   },
   "dependencies": {
     "@notionhq/client": "5.4.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/RaymondWHZ/notion-cms-adaptor"
   }
 }
