--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,20 @@
 {
   "compilerOptions": {
-    "lib": ["ES2019"],
     "target": "ES2019",
     "module": "commonjs",
 
+    "lib": ["ES2019"],
+
+    "outDir": "build",
+
+    "declarationMap": true,
+    "sourceMap": true,
+    "inlineSources": true,
+
     "declaration": true,
-    "emitDeclarationOnly": true,
 
     "strict": true,
-    "skipLibCheck": true,
-    "outDir": "build"
+    "skipLibCheck": true
   },
   "include": ["src/**/*"]
 }
